[gd_scene load_steps=2 format=3 uid="uid://engraving_panel_scene"]

[ext_resource type="Script" path="res://scenes/player/ui/engraving_panel.gd" id="1_script"]

[node name="EngravingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "法术刻录"

[node name="ClearAllButton" type="Button" parent="MainContainer/TopBar"]
layout_mode = 2
text = "清除全部"

[node name="CloseButton" type="Button" parent="MainContainer/TopBar"]
layout_mode = 2
text = "关闭"

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="BodyPartsLabel" type="Label" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "肢体刻录槽"

[node name="BodyPartsScroll" type="ScrollContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="BodyPartsContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/BodyPartsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponLabel" type="Label" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "武器刻录槽"

[node name="WeaponSlotsContainer" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="MainContainer/ContentContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpellLibraryLabel" type="Label" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "法术库"

[node name="SpellLibraryList" type="ItemList" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpellInfoLabel" type="RichTextLabel" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]选择一个法术查看详情[/center]"

[node name="HelpLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "提示: 先选择法术，再点击槽位进行刻录。点击已刻录的槽位可移除法术。"
horizontal_alignment = 1
