# engraving_panel.gd
# åˆ»å½•UIé¢æ¿ - ç®¡ç†æ³•æœ¯åˆ»å½•çš„ç”¨æˆ·ç•Œé¢ï¼ˆæ”¯æŒç†Ÿç»ƒåº¦å’Œå‰æ‘‡æ˜¾ç¤ºï¼‰
extends Control
class_name EngravingPanel

## ä¿¡å·
signal spell_engraved(target_type: String, target_index: int, slot_index: int, spell: SpellCoreData)
signal spell_removed(target_type: String, target_index: int, slot_index: int)
signal panel_closed

## èŠ‚ç‚¹å¼•ç”¨
@onready var body_parts_container: VBoxContainer = $MainContainer/LeftPanel/BodyPartsContainer
@onready var weapon_slots_container: VBoxContainer = $MainContainer/LeftPanel/WeaponSlotsContainer
@onready var spell_library_list: ItemList = $MainContainer/RightPanel/SpellLibraryList
@onready var spell_info_label: RichTextLabel = $MainContainer/RightPanel/SpellInfoLabel
@onready var close_button: Button = $MainContainer/TopBar/CloseButton
@onready var clear_all_button: Button = $MainContainer/TopBar/ClearAllButton

## çŽ©å®¶å¼•ç”¨
var player: PlayerController = null

## å¯ç”¨æ³•æœ¯åº“
var spell_library: Array[SpellCoreData] = []

## å½“å‰é€‰ä¸­çš„æ³•æœ¯
var selected_spell: SpellCoreData = null
var selected_spell_index: int = -1

## å½“å‰é€‰ä¸­çš„æ§½ä½
var selected_slot: EngravingSlot = null
var selected_slot_button: Button = null

## æ§½ä½æŒ‰é’®æ˜ å°„
var slot_buttons: Dictionary = {}

## æ§½ä½è¿›åº¦æ¡æ˜ å°„
var slot_progress_bars: Dictionary = {}

func _ready() -> void:
	# è¿žæŽ¥æŒ‰é’®ä¿¡å·
	close_button.pressed.connect(_on_close_pressed)
	clear_all_button.pressed.connect(_on_clear_all_pressed)
	spell_library_list.item_selected.connect(_on_spell_selected)

func _process(delta: float) -> void:
	# æ›´æ–°æ§½ä½è¿›åº¦æ¡
	_update_slot_progress_bars()

## åˆå§‹åŒ–é¢æ¿
func initialize(_player: PlayerController, _spell_library: Array[SpellCoreData]) -> void:
	player = _player
	spell_library = _spell_library
	
	# åˆ·æ–°UI
	refresh_ui()

## åˆ·æ–°æ•´ä¸ªUI
func refresh_ui() -> void:
	_refresh_body_parts()
	_refresh_weapon_slots()
	_refresh_spell_library()
	_update_spell_info()

## åˆ·æ–°è‚¢ä½“éƒ¨ä»¶æ˜¾ç¤º
func _refresh_body_parts() -> void:
	# æ¸…ç©ºçŽ°æœ‰å†…å®¹
	for child in body_parts_container.get_children():
		child.queue_free()
	
	slot_buttons.clear()
	slot_progress_bars.clear()
	
	if player == null or player.engraving_manager == null:
		return
	
	var body_parts = player.get_body_parts()
	
	for part in body_parts:
		# åˆ›å»ºéƒ¨ä»¶å®¹å™¨
		var part_container = VBoxContainer.new()
		part_container.name = "Part_%s" % part.part_id
		
		# éƒ¨ä»¶æ ‡é¢˜
		var title_label = Label.new()
		title_label.text = part.part_name
		title_label.add_theme_font_size_override("font_size", 14)
		part_container.add_child(title_label)
		
		# åˆ»å½•æ§½
		var slots_container = HBoxContainer.new()
		for i in range(part.engraving_slots.size()):
			var slot = part.engraving_slots[i]
			var slot_widget = _create_slot_widget(slot, "body", part.part_type, i)
			slots_container.add_child(slot_widget)
		
		part_container.add_child(slots_container)
		
		# æ·»åŠ åˆ†éš”
		var separator = HSeparator.new()
		part_container.add_child(separator)
		
		body_parts_container.add_child(part_container)

## åˆ·æ–°æ­¦å™¨æ§½ä½æ˜¾ç¤º
func _refresh_weapon_slots() -> void:
	# æ¸…ç©ºçŽ°æœ‰å†…å®¹
	for child in weapon_slots_container.get_children():
		child.queue_free()
	
	if player == null or player.current_weapon == null:
		var no_weapon_label = Label.new()
		no_weapon_label.text = "æœªè£…å¤‡æ­¦å™¨"
		weapon_slots_container.add_child(no_weapon_label)
		return
	
	var weapon = player.current_weapon
	
	# æ­¦å™¨æ ‡é¢˜
	var title_label = Label.new()
	title_label.text = "æ­¦å™¨: %s" % weapon.weapon_name
	title_label.add_theme_font_size_override("font_size", 14)
	weapon_slots_container.add_child(title_label)
	
	# æ­¦å™¨åˆ»å½•æ§½
	var slots_container = HBoxContainer.new()
	for i in range(weapon.engraving_slots.size()):
		var slot = weapon.engraving_slots[i]
		var slot_widget = _create_slot_widget(slot, "weapon", 0, i)
		slots_container.add_child(slot_widget)
	
	weapon_slots_container.add_child(slots_container)

## åˆ›å»ºæ§½ä½ç»„ä»¶ï¼ˆåŒ…å«æŒ‰é’®å’Œè¿›åº¦æ¡ï¼‰
func _create_slot_widget(slot: EngravingSlot, target_type: String, target_index: int, slot_index: int) -> Control:
	var container = VBoxContainer.new()
	container.custom_minimum_size = Vector2(90, 80)
	
	# åˆ›å»ºæŒ‰é’®
	var button = Button.new()
	button.custom_minimum_size = Vector2(85, 50)
	
	# è®¾ç½®æŒ‰é’®æ–‡æœ¬
	if slot.engraved_spell != null:
		var spell = slot.engraved_spell
		button.text = spell.spell_name
		button.modulate = Color(0.8, 1.0, 0.8)  # ç»¿è‰²è°ƒè¡¨ç¤ºå·²åˆ»å½•
	else:
		button.text = "ç©ºæ§½ä½"
		button.modulate = Color(0.7, 0.7, 0.7)  # ç°è‰²è¡¨ç¤ºç©º
	
	if slot.is_locked:
		button.disabled = true
		button.modulate = Color(0.5, 0.5, 0.5)
	
	# è®¾ç½®æç¤ºï¼ˆåŒ…å«ç†Ÿç»ƒåº¦å’Œå‰æ‘‡ä¿¡æ¯ï¼‰
	button.tooltip_text = _get_slot_tooltip(slot)
	
	# è¿žæŽ¥ä¿¡å·
	button.pressed.connect(_on_slot_button_pressed.bind(slot, button, target_type, target_index, slot_index))
	
	container.add_child(button)
	
	# è®°å½•æŒ‰é’®æ˜ å°„
	slot_buttons[slot.slot_id] = button
	
	# åˆ›å»ºè¿›åº¦æ¡ï¼ˆæ˜¾ç¤ºå†·å´/å‰æ‘‡ï¼‰
	var progress_bar = ProgressBar.new()
	progress_bar.custom_minimum_size = Vector2(85, 8)
	progress_bar.min_value = 0
	progress_bar.max_value = 1
	progress_bar.value = 1
	progress_bar.show_percentage = false
	container.add_child(progress_bar)
	
	# è®°å½•è¿›åº¦æ¡æ˜ å°„
	slot_progress_bars[slot.slot_id] = progress_bar
	
	# ç†Ÿç»ƒåº¦æ ‡ç­¾
	if slot.engraved_spell != null:
		var prof_label = Label.new()
		prof_label.add_theme_font_size_override("font_size", 10)
		var proficiency = _get_spell_proficiency(slot.engraved_spell.spell_id)
		prof_label.text = "ç†Ÿç»ƒåº¦: %.0f%%" % (proficiency * 100)
		prof_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
		container.add_child(prof_label)
	
	return container

## èŽ·å–æ§½ä½æç¤ºæ–‡æœ¬
func _get_slot_tooltip(slot: EngravingSlot) -> String:
	var tooltip = slot.slot_name + "\n"
	tooltip += "å®¹é‡: %.0f\n" % slot.slot_capacity
	
	if slot.engraved_spell != null:
		var spell = slot.engraved_spell
		var proficiency = _get_spell_proficiency(spell.spell_id)
		
		tooltip += "\n[å·²åˆ»å½•] %s\n" % spell.spell_name
		tooltip += "ç±»åž‹: %s\n" % spell.get_type_name()
		tooltip += "æ¶ˆè€—: %.0f\n" % spell.resource_cost
		tooltip += "\n--- å‰æ‘‡ä¿¡æ¯ ---\n"
		tooltip += "æ™®é€šå‰æ‘‡: %.2fs\n" % spell.calculate_windup_time(proficiency, false)
		tooltip += "åˆ»å½•å‰æ‘‡: %.2fs\n" % spell.calculate_windup_time(proficiency, true)
		tooltip += "ç†Ÿç»ƒåº¦: %.0f%% (å‡å°‘%.0f%%å‰æ‘‡)\n" % [proficiency * 100, proficiency * 50]
		
		if slot.cooldown > 0:
			tooltip += "å†·å´æ—¶é—´: %.1fs\n" % slot.cooldown
	
	return tooltip

## èŽ·å–æ³•æœ¯ç†Ÿç»ƒåº¦
func _get_spell_proficiency(spell_id: String) -> float:
	if player == null or player.engraving_manager == null:
		return 0.0
	return player.engraving_manager.get_spell_proficiency(spell_id)

## æ›´æ–°æ§½ä½è¿›åº¦æ¡
func _update_slot_progress_bars() -> void:
	if player == null or player.engraving_manager == null:
		return
	
	for slot in player.engraving_manager.all_slots:
		if not slot_progress_bars.has(slot.slot_id):
			continue
		
		var progress_bar = slot_progress_bars[slot.slot_id] as ProgressBar
		
		if slot.is_winding_up:
			# æ˜¾ç¤ºå‰æ‘‡è¿›åº¦
			progress_bar.value = slot.get_windup_progress()
			progress_bar.modulate = Color(1.0, 0.8, 0.2)  # é»„è‰²è¡¨ç¤ºè“„èƒ½ä¸­
		elif slot.cooldown_timer > 0:
			# æ˜¾ç¤ºå†·å´è¿›åº¦
			progress_bar.value = 1.0 - (slot.cooldown_timer / slot.cooldown) if slot.cooldown > 0 else 1.0
			progress_bar.modulate = Color(0.5, 0.5, 1.0)  # è“è‰²è¡¨ç¤ºå†·å´ä¸­
		else:
			# å°±ç»ªçŠ¶æ€
			progress_bar.value = 1.0
			progress_bar.modulate = Color(0.5, 1.0, 0.5)  # ç»¿è‰²è¡¨ç¤ºå°±ç»ª

## åˆ·æ–°æ³•æœ¯åº“æ˜¾ç¤º
func _refresh_spell_library() -> void:
	spell_library_list.clear()
	
	for i in range(spell_library.size()):
		var spell = spell_library[i]
		var type_icon = _get_spell_type_icon(spell)
		var proficiency = _get_spell_proficiency(spell.spell_id)
		var text = "%s %s (%.0f%%)" % [type_icon, spell.spell_name, proficiency * 100]
		spell_library_list.add_item(text)

## èŽ·å–æ³•æœ¯ç±»åž‹å›¾æ ‡
func _get_spell_type_icon(spell: SpellCoreData) -> String:
	match spell.spell_type:
		SpellCoreData.SpellType.PROJECTILE:
			return "ðŸŽ¯"
		SpellCoreData.SpellType.ENGRAVING:
			return "ðŸ”®"
		SpellCoreData.SpellType.HYBRID:
			return "âš¡"
	return "â“"

## æ›´æ–°æ³•æœ¯ä¿¡æ¯æ˜¾ç¤º
func _update_spell_info() -> void:
	if selected_spell == null:
		spell_info_label.text = "[center]é€‰æ‹©ä¸€ä¸ªæ³•æœ¯æŸ¥çœ‹è¯¦æƒ…[/center]"
		return
	
	var proficiency = _get_spell_proficiency(selected_spell.spell_id)
	var prof_data = null
	if player != null and player.engraving_manager != null:
		prof_data = player.engraving_manager.get_spell_proficiency_data(selected_spell.spell_id)
	
	var info = "[b]%s[/b] %s\n\n" % [selected_spell.spell_name, _get_spell_type_icon(selected_spell)]
	info += "[color=gray]%s[/color]\n\n" % selected_spell.description
	
	# åŸºæœ¬ä¿¡æ¯
	info += "[b]åŸºæœ¬å±žæ€§[/b]\n"
	info += "ç±»åž‹: %s\n" % selected_spell.get_type_name()
	info += "å¤æ‚åº¦: %.1f\n" % selected_spell.calculate_total_instability()
	info += "æ¶ˆè€—: %.0f\n" % selected_spell.resource_cost
	info += "å†·å´: %.1fs\n\n" % selected_spell.cooldown
	
	# å‰æ‘‡ä¿¡æ¯
	info += "[b]å‰æ‘‡/è“„èƒ½[/b]\n"
	var normal_windup = selected_spell.calculate_windup_time(proficiency, false)
	var engraved_windup = selected_spell.calculate_windup_time(proficiency, true)
	info += "æ™®é€šæ–½æ”¾: [color=yellow]%.2fs[/color]\n" % normal_windup
	info += "åˆ»å½•è§¦å‘: [color=green]%.2fs[/color]\n" % engraved_windup
	if normal_windup > 0:
		var reduction = (1.0 - engraved_windup / normal_windup) * 100
		info += "åˆ»å½•å‡å°‘: [color=cyan]%.0f%%[/color]\n\n" % reduction
	
	# ç†Ÿç»ƒåº¦ä¿¡æ¯
	info += "[b]ç†Ÿç»ƒåº¦[/b]\n"
	if prof_data != null:
		info += "ç­‰çº§: %s (%.0f%%)\n" % [prof_data.get_level_name(), proficiency * 100]
		info += "ä½¿ç”¨æ¬¡æ•°: %d\n" % prof_data.use_count
		info += "å‘½ä¸­æ¬¡æ•°: %d\n" % prof_data.hit_count
		info += "å‡»æ€æ¬¡æ•°: %d\n" % prof_data.kill_count
		info += "å‰æ‘‡å‡å°‘: %.0f%%\n\n" % (proficiency * 50)
	else:
		info += "ç­‰çº§: æ–°æ‰‹ (0%%)\n"
		info += "å‰æ‘‡å‡å°‘: 0%%\n\n"
	
	# æ˜¾ç¤ºæ‹“æ‰‘è§„åˆ™
	info += "[b]æ‹“æ‰‘è§„åˆ™[/b]\n"
	for rule in selected_spell.topology_rules:
		info += "- %s\n" % rule.get_description()
	
	spell_info_label.text = info

## æ§½ä½æŒ‰é’®ç‚¹å‡»å›žè°ƒ
func _on_slot_button_pressed(slot: EngravingSlot, button: Button, target_type: String, target_index: int, slot_index: int) -> void:
	# å–æ¶ˆä¹‹å‰é€‰ä¸­çš„æŒ‰é’®
	if selected_slot_button != null:
		selected_slot_button.modulate = _get_slot_color(selected_slot)
	
	# å¦‚æžœç‚¹å‡»çš„æ˜¯å·²é€‰ä¸­çš„æ§½ä½ï¼Œå°è¯•åˆ»å½•æˆ–ç§»é™¤
	if selected_slot == slot:
		if selected_spell != null and slot.engraved_spell == null:
			# åˆ»å½•æ³•æœ¯
			_engrave_spell(target_type, target_index, slot_index, selected_spell)
		elif slot.engraved_spell != null:
			# ç§»é™¤æ³•æœ¯
			_remove_spell(target_type, target_index, slot_index)
		
		selected_slot = null
		selected_slot_button = null
		return
	
	# é€‰ä¸­æ–°æ§½ä½
	selected_slot = slot
	selected_slot_button = button
	button.modulate = Color(1.0, 1.0, 0.5)  # é»„è‰²é«˜äº®

## æ³•æœ¯é€‰æ‹©å›žè°ƒ
func _on_spell_selected(index: int) -> void:
	if index < 0 or index >= spell_library.size():
		selected_spell = null
		selected_spell_index = -1
	else:
		selected_spell = spell_library[index]
		selected_spell_index = index
	
	_update_spell_info()
	
	# å¦‚æžœæœ‰é€‰ä¸­çš„æ§½ä½ï¼Œå°è¯•åˆ»å½•
	if selected_slot != null and selected_spell != null and selected_slot.engraved_spell == null:
		# éœ€è¦çŸ¥é“æ§½ä½çš„targetä¿¡æ¯ï¼Œè¿™é‡Œç®€åŒ–å¤„ç†
		pass

## åˆ»å½•æ³•æœ¯
func _engrave_spell(target_type: String, target_index: int, slot_index: int, spell: SpellCoreData) -> void:
	var success = false
	
	if target_type == "body":
		success = player.engrave_to_body(target_index, slot_index, spell)
	elif target_type == "weapon":
		success = player.engrave_to_weapon(slot_index, spell)
	
	if success:
		spell_engraved.emit(target_type, target_index, slot_index, spell)
		refresh_ui()
	else:
		print("åˆ»å½•å¤±è´¥")

## ç§»é™¤æ³•æœ¯
func _remove_spell(target_type: String, target_index: int, slot_index: int) -> void:
	var removed: SpellCoreData = null
	
	if target_type == "body":
		removed = player.engraving_manager.remove_from_body_part(target_index, slot_index)
	elif target_type == "weapon":
		removed = player.engraving_manager.remove_from_weapon(slot_index)
	
	if removed != null:
		spell_removed.emit(target_type, target_index, slot_index)
		refresh_ui()

## èŽ·å–æ§½ä½é¢œè‰²
func _get_slot_color(slot: EngravingSlot) -> Color:
	if slot == null:
		return Color(0.7, 0.7, 0.7)
	if slot.is_locked:
		return Color(0.5, 0.5, 0.5)
	elif slot.engraved_spell != null:
		return Color(0.8, 1.0, 0.8)
	else:
		return Color(0.7, 0.7, 0.7)

## å…³é—­æŒ‰é’®å›žè°ƒ
func _on_close_pressed() -> void:
	hide()
	panel_closed.emit()

## æ¸…é™¤æ‰€æœ‰åˆ»å½•
func _on_clear_all_pressed() -> void:
	if player == null or player.engraving_manager == null:
		return
	
	# æ¸…é™¤è‚¢ä½“åˆ»å½•
	for part in player.get_body_parts():
		for i in range(part.engraving_slots.size()):
			part.engraving_slots[i].remove_spell()
	
	# æ¸…é™¤æ­¦å™¨åˆ»å½•
	if player.current_weapon != null:
		for i in range(player.current_weapon.engraving_slots.size()):
			player.current_weapon.remove_spell_from_slot(i)
	
	refresh_ui()

## æ˜¾ç¤ºé¢æ¿
func show_panel() -> void:
	refresh_ui()
	show()

## éšè—é¢æ¿
func hide_panel() -> void:
	hide()
